--- a/Normal_DATN/src/main/resources/templates/Admin/components/navbar.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/navbar.html
@@ -25,8 +25,8 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Alexander Pierce</span>
+              <img src="/assets/img/services/service4.jpg" class="user-image" alt="User Image">
+              <span class="hidden-xs">[[${#request.remoteUser}]]</span>
             </a>
             <ul class="dropdown-menu">
               <!-- Menu Body -->
