--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shop.html
@@ -72,7 +72,7 @@
                                                                 </div>
                                                                 <div class="product_content">
                                                               <span class="product_price">[[${HoLy.price}]]</span>
-                                                            <h3 class="product_title"><a href="#">[[${HoLy.name}]]</a></h3>
+                                                            <h3 class="product_title"><a  th:href="@{|/singleProduct/${HoLy.id}|}">[[${HoLy.name}]]</a></h3>
                                                                 </div>
                                                  
                                                             </div>
