--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -111,12 +111,12 @@
                                                         </div>
                                                         <div class="product_content">
                                                             <span class="product_price">[[${HoLy.price}]]</span>
-                                                            <h3 class="product_title"><a href="#">[[${HoLy.name}]]</a></h3>
+                                                            <h3 class="product_title"><a  th:href="@{|/singleProduct/${HoLy.id}|}">[[${HoLy.name}]]</a></h3>
                                                         </div>
                                                         <div class="product_info">
                                                             <ul>
                                       
-                                                                <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
+                                                                <li><a  th:href="@{|/singleProduct/${HoLy.id}|}" data-toggle="modal" data-target="#modal_box" title="Quick view">Xem chi tiết</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
