--- a/Normal_DATN/src/main/resources/templates/Admin/page/orderDetail.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/orderDetail.html
@@ -40,15 +40,12 @@
               <table id="example" class="table table-bordered table-hover dataTable" width="100%" data-page-length="25" data-order="[[ 1, &quot;asc&quot; ]]">
                 <thead>
                  <tr role="row">
-                 <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">Id</th>
-                
-            
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Image</th>
+                 <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">Mã Hóa Đơn</th>
       
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Name</th>
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Price</th>
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Quantity</th>
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Amount</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Tên sản phẩm</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Giá sản phẩm</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Số lượng sản phẩm</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Thành tiền</th>
 
                  </tr>
                 
@@ -59,7 +56,6 @@
                 <tr th:each="HoLy:${item}" role="row" class="odd">
                   <td class="sorting_1">[[${HoLy.id}]]</td>
                  
-            <td class="sorting_1"><img style="width:100px;" th:src="@{|/assets/img/product/${HoLy.image}|}"  alt=""></td>
                    <td class="sorting_1">[[${HoLy.name}]]</td>
                   <td class="sorting_1">[[${HoLy.price}*1]]</td>
                   <td class="sorting_1">[[${HoLy.quanlity}]]</td>
