--- a/Normal_DATN/src/main/resources/templates/taiKhoan/ChangePass.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/ChangePass.html
@@ -29,9 +29,9 @@
 	<form action="/changePass" method="post">
 					  
 		<input type="text"name="username" th:value="${username}" placeholder="Username"readonly/>
-		<input type="password"name="password" th:value="${password}" placeholder="Password cũ"/>			
-		<input type="password"name="passwordMoi" th:value="${password}" placeholder="Password mới"/>			   
-		<input type="password"name="passwordXN" th:value="${password}" placeholder="Xác nhận lại Password"/>
+		<input type="password"name="password" th:value="${password}" minlength="6" placeholder="Password cũ"/>			
+		<input type="password"name="passwordMoi" th:value="${password}" minlength="6" placeholder="Password mới"/>			   
+		<input type="password"name="passwordXN" th:value="${password}" minlength="6" placeholder="Xác nhận lại Password"/>
 			<div class="forgot">
 							<h6>  <a href="/login">Đăng nhập</a></h6>
 						 </div>
