--- a/Normal_DATN/src/main/resources/static/assets/css/styleLogin.css
+++ b/Normal_DATN/src/main/resources/static/assets/css/styleLogin.css
@@ -118,7 +118,33 @@ span.login-color {
   color:#FFB900;
   font-weight: 700;
 }
-.header-left-bottom input[type="text"],[type="email"] {
+.header-left-bottom input[type="text"] {
+    background: url(../img/m.png)no-repeat 0px 5px;
+    outline: none;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    padding: 12px 13px 20px 44px;
+	border:none;
+    border-bottom:1px solid #fff;
+    width: 87%;
+    margin: 0 0 20px;
+    display: inline-block;
+}
+.header-left-bottom input[type="email"] {
+    background: url(../img/m.png)no-repeat 0px 5px;
+    outline: none;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    padding: 12px 13px 20px 44px;
+	border:none;
+    border-bottom:1px solid #fff;
+    width: 87%;
+    margin: 0 0 20px;
+    display: inline-block;
+}
+.header-left-bottom input[type="number"] {
     background: url(../img/m.png)no-repeat 0px 5px;
     outline: none;
     font-size: 15px;
@@ -285,7 +311,19 @@ span.sin-color {
    margin:70px 0px 0px 0px;
    position:relative;
 }
-.header-bottom-strip input[type="text"],[type="email"] {
+.header-bottom-strip input[type="text"] {
+	outline: none;
+	font-size: 17px;
+	font-weight: 400;
+	color: #000;
+	padding: 20px 60px;
+	border: 1px solid #39A1E5;
+	margin: 0px 0px 15px 0px;
+	width: 30%;
+	-webkit-appearance: none;
+	background:#eeeeee;
+}
+.header-bottom-strip input[type="email"] {
 	outline: none;
 	font-size: 17px;
 	font-weight: 400;
