--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -104,9 +104,21 @@
                                                            <div class="img_icone">
                                                                <img src="assets\img\cart\span-new.png" alt="">
                                                            </div>
-                                                           <div class="product_action">
+                                                         
+                                                                      <div th:if="${HoLy.available} != true">
+							 <div class="product_action">
+                                                               <a onclick="alert('Xin lỗi! Sản phẩm đã hết hàng.')" href="#"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
+                                                           </div>
+							</div>
+													                <div th:if="${HoLy.available} == true">
+												 <div class="product_action">
                                                                <a onclick="alert('Đã thêm vào giỏ hàng!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
                                                            </div>
+												           
+           																		     </div> 
+                                                         
+                                                         
+                                                          
                                                       
                                                         </div>
                                                         <div class="product_content">
