--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -38,8 +38,8 @@
           </a>
           <ul class="treeview-menu" style="display: block;">
             <li><a th:href="@{/admin/report/inventory}"><i class="fa fa-circle-o"></i>Tồn kho theo loại</a></li>
-            <li><a href="../UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-            <li><a href="../UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
+            <li><a th:href="@{/admin/report/revenueByCustomer}"><i class="fa fa-circle-o"></i> Doanh thu theo khách hàng</a></li>
+            <li><a th:href="@{/admin/report/commentPerDay}"><i class="fa fa-circle-o"></i> Số lượng comment theo ngày</a></li>
             <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
             <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
           </ul>
