Phật tổ có dạy mọi thứ chỉ là thương đau, tìm kiếm danh vọng chỉ là dối trá

--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -39,9 +39,7 @@
           <ul class="treeview-menu" style="display: block;">
             <li><a th:href="@{/admin/report/inventory}"><i class="fa fa-circle-o"></i>Tồn kho theo loại</a></li>
             <li><a th:href="@{/admin/report/revenueByCustomer}"><i class="fa fa-circle-o"></i> Doanh thu theo khách hàng</a></li>
-            <li><a th:href="@{/admin/report/commentPerDay}"><i class="fa fa-circle-o"></i> Số lượng comment theo ngày</a></li>
-            <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-            <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+            <li><a th:href="@{/admin/report/revenueByCategories}"><i class="fa fa-circle-o"></i> Doanh thu theo loại</a></li>
           </ul>
         </li>
         
