--- a/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
@@ -32,7 +32,7 @@
                                    <div class="col-lg-6 col-md-12">
                                        <div class="contact_message">
                                             <h3>Tell us your project</h3>   
-                                            <form  action="/ContactUs" method="POST" th:object="${contact}">
+                                            <form  action="/ContactUs/form" method="POST" th:object="${contact}">
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                      <i style="color:red" th:errors="*{name}"></i>
