--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
@@ -15,7 +15,7 @@
                                 <div class="col-12">
                                     <div class="breadcrumb_content">
                                         <ul>
-                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="/index">Trang chủ</a></li>
                                             <li><i class="fa fa-angle-right"></i></li>
                                             <li>Lịch sử đặt hàng</li>
                                         </ul>
