--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -40,6 +40,7 @@
             <li><a th:href="@{/admin/report/inventory}"><i class="fa fa-circle-o"></i>Tồn kho theo loại</a></li>
             <li><a th:href="@{/admin/report/revenueByCustomer}"><i class="fa fa-circle-o"></i> Doanh thu theo khách hàng</a></li>
             <li><a th:href="@{/admin/report/revenueByCategories}"><i class="fa fa-circle-o"></i> Doanh thu theo loại</a></li>
+             <li><a th:href="@{/admin/report/popularProduct}"><i class="fa fa-circle-o"></i>Sản phẩm bán chạy</a></li>
           </ul>
         </li>
         
