--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -100,7 +100,7 @@
                                              
                                                     <div class="single_product">
                                                         <div class="product_thumb">
-                                                           <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|assets/img/product/${HoLy.image}|}" alt=""></a> 
+                                                           <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a> 
                                                            <div class="img_icone">
                                                                <img src="assets\img\cart\span-new.png" alt="">
                                                            </div>
