--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shopN.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shopN.html
@@ -64,7 +64,7 @@
                                                         <div th:each="HoLy:${page.content}"  class="col-lg-4 col-md-6">
                                                             <div class="single_product">
                                                                 <div class="product_thumb">
-                                                                   <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/assets/img/product/${HoLy.image}|}" alt=""></a> 
+                                                                   <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a> 
                                                               
                                                               
                                                               
