--- a/Normal_DATN/src/main/resources/templates/taiKhoan/ChangePass.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/ChangePass.html
@@ -37,7 +37,7 @@
 						 </div>
 						 <br><br><br>
 						 
-	<input type="submit" value="Gửi">
+	<input type="submit" onclick="alert('Đổi mật khẩu thành công')" value="Gửi">
   </form>	
 					
 					
