--- a/Normal_DATN/src/main/resources/templates/taiKhoan/EditProfile.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/EditProfile.html
@@ -37,7 +37,7 @@
 							<h6>  <a href="/login">Đăng nhập</a></h6>
 						 </div>
 						 <br><br><br>
-	<input type="submit" value="Gửi">
+	<input type="submit" onclick="alert('Cập nhật tài khoản thành công')" value="Gửi">
   </form>	
 					
 					
