--- a/Normal_DATN/src/main/resources/templates/taiKhoan/MaOTP.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/MaOTP.html
@@ -28,7 +28,7 @@
 						
 	<form action="/XacThuc" method="post">
 					  
-		<input  type="text"name="otp" th:value="${maXN}" placeholder="Nhập mã xác nhận"/>
+		<input  type="number"name="otp" th:value="${maXN}" placeholder="Nhập mã xác nhận"/>
 						
 					   
 	<input type="submit" value="Gửi">
