--- a/Normal_DATN/src/main/resources/templates/taiKhoan/SignUp.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/SignUp.html
@@ -42,7 +42,8 @@
 						<i style="color:red"th:text="${ktEmail}"></i>
 						<input th:field="*{Email}"type="text"name="email" placeholder="Nhập Email"/>
 	                        
-	                        <input th:field="*{admin}" type="hidden" value="false" />
+	                        <input th:field="*{admin}" type="hidden"  />
+							<input th:field="*{activated}" type="hidden"  />
 					 	<div class="remember">
 			         
 						 <div class="forgot">
