--- a/Normal_DATN/src/main/resources/templates/Error404/index.html
+++ b/Normal_DATN/src/main/resources/templates/Error404/index.html
@@ -40,7 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="/index">Home</a></li>
 						<li><a href="#">About</a></li>  
 						<li><a href="#">Blog</a></li> 
-						<li><a href="/contact">Contact</a></li>
+						<li><a href="/ContactUs">Contact</a></li>
 					</ul> 
 				</div>	
 			</div>	
