--- a/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
@@ -34,7 +34,7 @@
                                             <div class="tab-content produc_tab_c">
                                                 <div class="tab-pane fade show active" id="p_tab1" role="tabpanel">
                                                     <div class="modal_img">
-                                                        <a href="#"><img th:src="@{|/assets/img/product/${product.image}|}"alt=""></a>
+                                                        <a href="#"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a>
                                                         <div class="img_icone">
                                                            <img th:src="@{|/assets/img/product/${product.image}|}" alt="">
                                                        </div>
